<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.StatsFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workPeriodsCompleted"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:text="@string/completed_work_periods" />

                <TextView
                    android:id="@+id/numberOfWorkPeriods"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/breakPeriodsCompleted"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/completed_break_periods" />

                <TextView
                    android:id="@+id/numberOfBreakPeriods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/remainingToDoLabel"
                    android:layout_width="37dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remaining_to_dos" />

                <TextView
                    android:id="@+id/remainingToDosValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/completedToDosLabel"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/completed_to_dos" />

                <TextView
                    android:id="@+id/completedToDosValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/deletedToDosLabel"
                    android:layout_width="37dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deleted_to_dos" />

                <TextView
                    android:id="@+id/deletedToDosValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalWorkTimeLabel"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/totalWorkTime" />

                <TextView
                    android:id="@+id/totalWorkTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/totalBreakTimeLabel"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/totalBreakTime" />

                <TextView
                    android:id="@+id/totalBreakTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <Button
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/finish" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>