...
                    android:fontFamily="@font/lato"
                    android:text="@string/work_period_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/workPeriodInput"
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/number_hints"
...
                    android:fontFamily="@font/lato"
                    android:text="@string/break_period_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/breakPeriodInput"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/lato"
                    android:hint="@string/number_hints"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/confirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/confirm_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />
...
