...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerText"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/endButtonWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/end_button"
            app:layout_constraintBottom_toTopOf="@+id/timerText"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toDoListScrollView">

            <EditText
                android:id="@+id/editToDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_to_do"
                android:inputType="text" />

            <Button
                android:id="@+id/submitToDoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_to_do"
                android:textSize="16sp" />
        </LinearLayout>
...
